demo/components/inference/granite-guardian-hap/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 30s
    openshift.io/display-name: "Granite Guardian HAP API Route"
  labels:
    app.kubernetes.io/name: granite-guardian-hap-38m
    app.kubernetes.io/component: safety-detector
    app.kubernetes.io/part-of: llamastack-trustyai-demo
    inferenceservice-name: granite-guardian-hap-38m
  name: granite-guardian-hap-38m
  namespace: summit-connect-2025
spec:
  host: granite-guardian-hap-38m-summit-connect-2025.apps.cluster-hjrxq.hjrxq.sandbox2053.opentlc.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: granite-guardian-hap-38m-predictor
    weight: 100
  wildcardPolicy: None
